--- a/dyu28.html
+++ b/dyu28.html
@@ -1,34 +1,3 @@
-Skip to content
-Search or jump to…
-Pulls
-Issues
-Codespaces
-Marketplace
-Explore
- 
-@dsdyu 
-dsdyu
-/
-dsdyu.github.io
-Public
-Cannot fork because you own this repository and are not a member of any organizations.
-Code
-Issues
-Pull requests
-Actions
-Projects
-Wiki
-Security
-Insights
-More
-dsdyu.github.io/dsdyu.html
-@dsdyu
-dsdyu Update dsdyu.html
-Latest commit 67b624d 20 hours ago
- History
- 1 contributor
-38 lines (37 sloc)  1.88 KB
-
 <html lang="zh_CN"><head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -68,16 +37,5 @@ Latest commit 67b624d 20 hours ago
         </div>
 </div></body></html>
 Footer
-© 2023 GitHub, Inc.
-Footer navigation
-Terms
-Privacy
-Security
-Status
-Docs
-Contact GitHub
-Pricing
-API
-Training
-Blog
-About
+© 2023 28圈, 心态平和方能致胜千里。
+
