--- a/dyu28.html
+++ b/dyu28.html
@@ -2,12 +2,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>毕十三</title>
+    <title>发财发财</title>
 </head>
 <body>
         <div>
-        <a href="https://0aefcc.pt8r56.com/join/Tfxbk5Li"><img style="width: 100%; height: auto" src="dztg1.gif" alt="" 0"=""></a></div> 
-        <a href="https://0aefcc.pt8r56.com/join/Tfxbk5Li"><img style="width: 100%; height: auto" src="dztg.gif" alt="" 0"=""></a></div> 
+        <a href="https://a0388b.pt8r56.com/join/c47lVia9"><img style="width: 100%; height: auto" src="dztg1.gif" alt="" 0"=""></a></div> 
+        <a href="https://a0388b.pt8r56.com/join/c47lVia9"><img style="width: 100%; height: auto" src="dztg.gif" alt="" 0"=""></a></div> 
 
         <div>
           <h2><span style="color: #dc143c"> 💥冲30送28💥 加拿大28、电子</span></h2>
@@ -15,7 +15,7 @@
       </div>
       <div>
         <ul>
-          <li><a href="https://0aefcc.pt8r56.com/join/Tfxbk5Li"><span style="color: #dc143c"> 💥点击注册爆狗庄💥 </span></a></li>
+          <li><a href="https://a0388b.pt8r56.com/join/c47lVia9"><span style="color: #dc143c"> 💥点击注册爆狗庄💥 </span></a></li>
           <li><a href="https://ambsuperslot.app/mahjong-ways-2/">🎰PG电子模拟器🎰</a></li>
           <li><a href="https://demo.cqgame.games/Home">CQ9电子、捕鱼模拟器</a></li>
           <li><a href="https://yc28.info/"><span style="color: #1809e7"> 🧮加拿大28预测 🧮</span></a></li>
